Edited wiki page FAQ_v1 through web user interface.

--- a/wiki/FAQ_v1.wiki
+++ b/wiki/FAQ_v1.wiki
@@ -17,3 +17,7 @@ Edit /etc/security/limits.conf and add:
  * hard nofile 30000
 
 reference: https://groups.google.com/d/topic/ci-framework/LDNSJnf6BZg/discussion
+
+== Is there an easy way to purge my current repo and start over ==
+
+running 'make purgedb' will purge all your tables, except for the apikeys. 
