--- a/wiki/ServerInstall_v1_RC3.wiki
+++ b/wiki/ServerInstall_v1_RC3.wiki
@@ -1,5 +1,7 @@
 #summary the Server Installation (v1) RC3
 
+<font color="red">*UNDER CONSTRUCTION*</font>
+
 * Before you Begin *
  * From this point on, ignore all other doc (including any client side doc), this page includes all the doc required to test v1 and it could conflict with other doc creating confusion, pain and potential alcohol abuse..
 
