--- a/wiki/ChangeLog_v1.wiki
+++ b/wiki/ChangeLog_v1.wiki
@@ -1,6 +1,6 @@
 #summary the v1 change log
 
-== ChangeLog==
+== !ChangeLog==
 the official, up-to-date changelog can now be found [https://github.com/collectiveintel/cif-v1/blob/master/ChangeLog here]
 
 === RC3 - 2013-05 ===
