Edited wiki page API_CIFProtocol_v1 through web user interface.

--- a/wiki/API_CIFProtocol_v1.wiki
+++ b/wiki/API_CIFProtocol_v1.wiki
@@ -1,8 +1,4 @@
-#summary the cif-protocol v1
-
-<font color='red'>
-=UNDER CONSTRUCTION=
-</font>
+#summary the v1 cif-protocol
 
 = Introduction =
 
