Edited wiki page ServerInstall_Ubuntu12_v1 through web user interface.

--- a/wiki/ServerInstall_Ubuntu12_v1.wiki
+++ b/wiki/ServerInstall_Ubuntu12_v1.wiki
@@ -102,7 +102,7 @@ $ aptitude -y install rng-tools build-essential postgresql apache2 apache2-threa
 }}}
  # Install the remaining perl dependencies from CPAN (as root)
 {{{
-$ PERL_MM_USE_DEFAULT=1 perl -MCPAN -e 'install Net::Abuse::Utils,Linux::Cpuinfo,Google::ProtocolBuffers,Iodef::Pb::Simple,Compress::Snappy,Net::Abuse::Utils::Spamhaus,Net::DNS::Match,Snort::Rule,Parse::Range,Log::Dispatch,Net::SSLeay,ZeroMQ,Sys::MemInfo,LWP::Protocol::https'
+$ PERL_MM_USE_DEFAULT=1 perl -MCPAN -e 'install Net::Abuse::Utils,Linux::Cpuinfo,Google::ProtocolBuffers,Iodef::Pb::Simple,Compress::Snappy,Net::Abuse::Utils::Spamhaus,Net::DNS::Match,Snort::Rule,Parse::Range,Log::Dispatch,Net::SSLeay,ZeroMQ,Sys::MemInfo,LWP::Protocol::https,Module::Build'
 }}}
 
 == System Setup ==
