--- a/wiki/ServerInstall_DebianSqueeze_v1.wiki
+++ b/wiki/ServerInstall_DebianSqueeze_v1.wiki
@@ -9,9 +9,9 @@ This assumes a clean install of Debian Squeeze (v6.0.x) with sudo and all base s
 = Details =
 == Caveats ==
 === Minimal Debian ===
-Minimal Debian does not come with sudo or the normal version of vim. If you used the net boot version of the debian installer, you'll need to install these as root:
+Minimal Debian does not come with sudo. If you used the net boot version of the debian installer, you'll need to install this as root:
 {{{
-$ aptitude install sudo vim
+$ aptitude install sudo
 }}}
 === Static Address ===
 Make sure your instance has a static v4 address
