Edited wiki page PostgresInstall_v1 through web user interface.

--- a/wiki/PostgresInstall_v1.wiki
+++ b/wiki/PostgresInstall_v1.wiki
@@ -85,7 +85,8 @@ echo kernel.shmmax = $shmmax
 echo kernel.shmall = $shmall
 echo vm.overcommit_memory = 2
 echo vm.swappiness = 0
-# testing
+# If you install CIF on a machine with limited ram and 
+# have out of memory issues, uncomment the next line
 #echo vm.overcommit_ratio = 100
 }}}
  # run the script
