--- a/wiki/BrowserPluginsInstall_v0.wiki
+++ b/wiki/BrowserPluginsInstall_v0.wiki
@@ -5,7 +5,7 @@
 
 This extension for Google Chrome/Firefox allows you to query CIF servers and get formatted results in your browser. It also allows new data to be submitted directly via the API.
 
-*Download the Firefox plugin [https://github.com/downloads/collectiveintel/cif-client-chrome/CIF-FFExtension-latest.xpi here].*
+*Download the Firefox plugin [https://collective-intelligence-framework.googlecode.com/files/CIF-FFExtension.xpi here].*
 
 *Download the Chrome plugin [https://chrome.google.com/webstore/detail/bimiihlcdmbjjpbmnkiaaiolfneljdne here].*
 
