--- a/wiki/SideBar.wiki
+++ b/wiki/SideBar.wiki
@@ -15,8 +15,8 @@
    * [GroupSupport_v1 Group Support]
    * [RTCIFMinimal_v1 RT Plugin]
    * [ServerBackup_v1 Backup]
-  * [ClientOptions_v Client]
-   * [ClientInstall_v1 Client]
+  * [ClientOptions_v1 Client]
+   * [ClientInstall_v1 Native Client]
    * [ClientInstall_Browser_v1 Browser Plugins]
   * [Feeds_v1 Feeds]
    * [FeedConfig_v1 Feed Config]
