Edited wiki page Utilities_v1 through web user interface.

--- a/wiki/Utilities_v1.wiki
+++ b/wiki/Utilities_v1.wiki
@@ -1,16 +1,16 @@
 #summary cif utilities
 
-<font color="red">
-= Unstable =
-</font>
-
 <wiki:toc max_depth="2" />
 
 = Introduction =
 
 == cif ==
 
+a command line utility used for accessing the API of a cif instance (making queries, etc).
+
 == cif_apikeys ==
+
+server-side, command line utility used to generate api keys.
 
 {{{
 $ cif_apikeys -h
@@ -47,10 +47,18 @@ cif_crontool tells cif_smrt to run the following command:
 $ cif_smrt -c /opt/cif/etc/custom.cfg -T medium -f phishtank
 }}}
 
+== cif_smrt ==
+
+a utility (usually called by cif_crontool) that reads in configs, parses feed data and transforms it into IODEF.
+
 == cif_feed ==
+
+server-side, command line utility used (usually via cron) to generate pre-cached feeds (infrastructure/botnet, domain/malware, url/phishing, etc...).
+
+== cif_vacuum ==
+
+a server-side tool that vacuums' the cif warehouse (removes older entries, etc).
 
 == cif_skel ==
 
-== cif_smrt ==
-
-== cif_vaccum ==
+a sample skeleton script used to create new server-side utilities.
