Edited wiki page SideBar through web user interface.

--- a/wiki/SideBar.wiki
+++ b/wiki/SideBar.wiki
@@ -4,17 +4,11 @@
   * [CommunityExamples]
   * [http://groups.google.com/group/ci-framework Discussion Group]
  * (testing) [WhatisCIF v1]
-  * [ServerInstall_v1 Server]
+  * [FAQ_v1 FAQ]
    * [Utilities_v1 Utilities]
    * [MigrateApikeys_v1 API key migration]
-   * [CIFInfrastructureDiagram_v1 Distributed Environment]
-    * [SmrtInstall_v1 Smrt Standalone]
-    * [RouterInstall_v1 Router Standalone]
-    * [DbiInstall_v1 Database Interface]
-    * [PostgresqlStandalone_v1 PostgreSQL Standalone]
    * [GroupSupport_v1 Group Support]
-   * [RTCIFMinimal_v1 RT Plugin]
-   * [ServerBackup_v1 Backup]
+  * [ServerInstall_v1 Server]
   * [ClientOptions_v1 Client]
    * [ClientInstall_v1 Native Client]
    * [ClientInstall_Browser_v1 Browser Plugins]
@@ -34,14 +28,19 @@
     * [FeedWhitelists_v1 Whitelists]
    * [TaxonomyConfidence_v1 Confidence]
    * [Whitelist_v1 Whitelisting]
-  * Cookbook
+  * Advanced
    * [AddingFeeds_v1 Adding New Feeds]
+   * [CIFInfrastructureDiagram_v1 Distributed Environment]
+    * [SmrtInstall_v1 Smrt Standalone]
+    * [RouterInstall_v1 Router Standalone]
+    * [DbiInstall_v1 Database Interface]
+    * [PostgresqlStandalone_v1 PostgreSQL Standalone]
+   * [ServerBackup_v1 Backup]
   * Integration
     * [Integration_RT_v1]
     * [Integration_Snort Snort]
     * [Integration_TippingPoint Tipping Point]
     * [Integration_Bind Bind]
-  * [FAQ_v1 FAQ]
   * [API_v1 API]
    * [API_CIFProtocol_v1 CIF Protocol]
    * [API_ProtocolBuffers_v1 Protocol Buffer API]
