--- a/wiki/SideBar.wiki
+++ b/wiki/SideBar.wiki
@@ -15,9 +15,9 @@
    * [ClientInstall_Browser_v1 Browser Plugins]
   * Integration
     * [Integration_RT_v1 Request Tracker]
-    * [Integration_Snort Snort]
-    * [Integration_TippingPoint Tipping Point]
-    * [Integration_Bind Bind]
+    * [Integration_Snort_v1 Snort]
+    * [Integration_Bind_v1 Bind]
+    * [Integration_TippingPoint_v1 Tipping Point]
   * [Feeds_v1 Feeds]
    * [FeedsFAQ_v1 Feed FAQ]
    * [FeedConfig_v1 Feed Config]
