--- a/wiki/SideBar.wiki
+++ b/wiki/SideBar.wiki
@@ -6,6 +6,10 @@
   * [http://groups.google.com/group/ci-framework Discussion Group]
  * (testing) [WhatisCIF v1]
   * [FAQ_v1 FAQ]
+   * [Utilities_v1 Utilities]
+   * [MigrateApikeys_v1 API key migration]
+   * [GroupSupport_v1 Group Support]
+  * General Terminologies
    * [TaxonomyConfidence_v1 Confidence]
    * [Whitelist_v1 Whitelisting]
    * [FeedAssessments_v1 Assessments]
@@ -19,9 +23,6 @@
     * [FeedSpamvertising_v1 Spamvertising]
     * [FeedSuspicious_v1 Suspicious]
     * [FeedWhitelists_v1 Whitelists]
-   * [Utilities_v1 Utilities]
-   * [MigrateApikeys_v1 API key migration]
-   * [GroupSupport_v1 Group Support]
   * [ServerInstall_v1 Server]
   * [ClientOptions_v1 Client]
    * [ClientInstall_v1 Native Client]
