Edited wiki page SideBar through web user interface.

--- a/wiki/SideBar.wiki
+++ b/wiki/SideBar.wiki
@@ -31,8 +31,7 @@
     * [Integration_Snort_v1 Snort]
     * [Integration_Bind_v1 Bind]
     * [Integration_TippingPoint_v1 Tipping Point]
-  * [CustomFeeds_v1 Adding Custom Feeds]
-   * [AddingFeeds_v1 Parsing New Feeds]
+  * [AddingFeeds_v1 Adding Custom Feeds]
    * [FeedConfig_v1 Custom Configs]
   * [Feeds_v1 Generating Feeds]
    * [FeedsFAQ_v1 Feed FAQ]
