--- a/wiki/SideBar.wiki
+++ b/wiki/SideBar.wiki
@@ -6,8 +6,8 @@
   * [http://groups.google.com/group/ci-framework Discussion Group]
  * (testing) [WhatisCIF v1]
   * [FAQ_v1 FAQ]
-   * [TaxonomyConfidence_v1 Confidence]
-   * [FeedAssessments_v1 Assessments]
+   * [TaxonomyConfidence_v1 Confidence Definitions]
+   * [FeedAssessments_v1 Assessment Definitions]
     * [FeedsBotnet_v1 Botnet]
     * [FeedEmail_v1 Email]
     * [FeedFastflux_v1 Fastflux]
@@ -17,7 +17,7 @@
     * [FeedsSpam_v1 Spam]
     * [FeedSpamvertising_v1 Spamvertising]
     * [FeedSuspicious_v1 Suspicious]
-    * [FeedWhitelists_v1 Whitelists]
+    * [FeedWhitelists_v1 Whitelists Definitions]
    * [Whitelist_v1 Whitelisting]
    * [Utilities_v1 Utilities]
    * [MigrateApikeys_v1 API key migration]
